--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
-node_modules
+__pycache__
 .env
-coverage
-coverage.json
-typechain
-
-#Hardhat files
-cache
-artifacts
+.history
+.hypothesis/
+build/
+reports/
