Upgrade all contracts to same pragma 0.8.7 and fix chainlink import issue

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,8 @@
     ],
     "solidity.remappings": [
         "@openzeppelin/=/Users/fvs/.brownie/packages/OpenZeppelin/openzeppelin-contracts@4.6.0",
-        "@chainlink/=/Users/fvs/.brownie/packages/smartcontractkit/chainlink-brownie-contracts@0.4.1",
+        "@chainlink-brownie/=/Users/fvs/.brownie/packages/smartcontractkit/chainlink-brownie-contracts@0.4.1",
     ],
     "python.testing.unittestEnabled": false,
-    "python.testing.pytestEnabled": true
+    "python.testing.pytestEnabled": true,
 }
